deploy/azure/app/k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nx-app-service
  labels:
    app: nx-app
spec:
  selector:
    app: nx-app
  ports:
    - protocol: TCP
      port: 80 # The port that the service will expose
      targetPort: 3000 # The port on the container
  type: ClusterIP # Internal access within the cluster (can also use LoadBalancer or NodePort)
